--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full font-Roboto">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Application Form | Hanjo</title>
+    <title>Job Application Form | Hanjo Engineering</title>
   </head>
   <body class="h-full">
     <div id="root" class="flex flex-col h-full"></div>
